documentation/1.0/walkthrough.md
---
layout: documentation
title: Ceylon Walkthrough
tab: documentation
unique_id: walkthroughpage
author: Gavin King
doc_root: ..
---

# #{page.title}

The Ceylon Walkthrough is a set of exercises originally developed for 
a workshop presented by Gavin and Enrique in Mexico City. It comes in 
English and Spanish and covers much of the basics of the language.

## Before you start

To try the walkthrough, first install Java 7, Eclipse Kepler, and 
[Ceylon IDE](../ide/install).

## Getting the code

The walkthrough project is [in github](https://github.com/ceylon/ceylon-walkthrough).
To import the project into Eclipse:

1. Select `File > Import...`, then `Git > Projects from Git`, and click `Next`.
2. Select `URI`, and click `Next`.
3. Enter the URI `https://github.com/ceylon/ceylon-walkthrough.git` and click `Next`.
4. Select _only_ the branch `master`, and click `Next`.
5. Enter a directory on the local file system, click `Next` twice, and then `Finish`.

## Try it

* For English, go to the directory `source/en`.
* Para español, ve a `source/es`.

Start with `01basics.ceylon`.
 